# Summer-2021

./: .gitignore  README.md
Books/: DDaCA-H&H  DDaCA-P&P  RE4B  README.md  ToCS
DDaCA/: README.md
DDaCA/HWs/: HW1-Solution.md  HW2-Solution.md
DDaCA/KALI/: README.md  draft
DDaCA/KALI/modules/: d_flip_flop  d_flip_flop.v  full_adder  mux  mux.v
DDaCA/Turing-Machine/: README.md  adder.v  draft  memory  memory.v  ram.v  register  register.v  tmac  tmac.v
DDaCA/Turing-Machine/modules/: adder  adder.v  bit_adder.v  d_latch  d_latch.v  full_adder.v  mux.v  (+2 more)
DDaCA/Verilog/: README.md  alu  alu.v  bus_selector  bus_selector.v  counter  counter_tb.v  d_flip_flop  d_flip_flop.v  d_flip_flop2  d_flip_flop2.v  d_flip_flop2.vcd  d_flip_flop2_tb.v  d_latch  d_latch.v  d_latch.vcd  d_latch_tb.v  divby3fsm  divby3fsm.v  example  example.v  flop_en_ar  flop_en_ar.v  hello  test.vcd
FRS/: README.md  main.cpp
FRS/ALC/: CMakeLists.txt  alc.cpp  alc.h  alc.py  bit_stream.cpp  core.cpp  core.h  defs.h  in.sys  init.sh  io.cpp  io.h  main  main.cpp  make_params.cpp  memory.cpp  memory.h  out.opt  out.sta  out.sys  parameters.h  run.py  system.cpp  system.h  todo.txt  utils.cpp  utils.h
FRS/Adaptive-Fuzzy-Compression/: README.md  afc.h  lint  lint.cpp  lint.h  lint2.h
FaIS/: README.md
FaIS/assembly/: a.out  exec.sh  hello.asm
FaIS/discord-bot/: bot.py  db.csv  utils.py
SD/Data-Generator-Engine/: README.md  engine.py
SD/Pseudo-Parallel-Execution-Engine/: CMakeLists.txt  README.md  log  log.cpp  main  main.cpp  main2  main2.cpp  ppee.h  run_diagnostics.sh  test  test.cpp
(+53 files in other folders)
